--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ p {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    border-radius: 5px;
 }
 
 .botao {
@@ -40,5 +41,6 @@ p {
 input {
     font-weight: bold;
     font-size: 20px;
+    border-radius: 5px;
 
 }
