--- a/style.css
+++ b/style.css
@@ -13,13 +13,14 @@ h2 {
 }
 
 p {
+    margin: -5px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .meiof {
     background-color: white;
-    height: 350px;
-    width: 350px;
+    height: 450px;
+    width: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,18 +30,39 @@ p {
 
 .botao {
     background-color: royalblue;
-    font-size: 30px;
+    font-size: 40px;
     font-weight: bold;
     color: white;
     border: none;
     border-radius: 5px;
-    width: 300px;
+    width: 360px;
+    cursor: pointer;
 
+}
+
+button:hover{
+    animation-name: botao;
+    animation-duration: 0.5s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-timing-function: ease-out;
+
+}
+
+@keyframes botao{
+    0%{
+        transform: scale(1);
+    }
+
+    100%{
+
+        transform: scale(1.02);
+    }
 }
 
 input {
     font-weight: bold;
-    font-size: 20px;
+    font-size: 25px;
     border-radius: 5px;
-
+    margin: 20px;
 }
